<resources>
    <string name="app_name">Bernie+</string>
    <string name="home">Home</string>
    <string name="plans">Plans</string>
    <string name="events_map">Events Map</string>
    <string name="canvas">Canvas</string>
    <string name="timeline">Timeline</string>
    <string name="legislation">Legislation</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="news">News</string>
    <string name="taxes">Taxes</string>
    <string name="jobs">Jobs</string>
    <string name="press">Press</string>
    <string name="podcast">Podcast</string>

    <string name="events_url" translatable="false">https://map.berniesanders.com/</string>
    <string name="bern_url" translatable="false">https://app.berniesanders.com/</string>
    <string name="news_url" translatable="false">https://bernie.substack.com/</string>
    <string name="taxes_url" translatable="false">https://berniesanders.com/tax-returns/</string>
    <string name="jobs_url" translatable="false">https://boards.greenhouse.io/bernie2020</string>
    <string name="press_url" translatable="false">https://berniesanders.com/press/</string>
    <string name="podcast_url" translatable="false">https://berniesanders.com/podcast/</string>
    <string name="debt_calc_url">https://berniesanders.com/debt/</string>
    <string name="how_to_vote_url">https://voteforbernie.org/</string>
    <string name="volunteer_url">https://act.berniesanders.com/signup/volunteer-bernie-sanders/</string>
    <string name="donate_url">https://secure.actblue.com/donate/bernieplus</string>
    
    <string name="plans_and_proposals">Plans and Proposals</string>
    <string name="detailed_plans_and_bills">Detailed Plans &amp; Bills</string>
    <string name="statements">Statements</string>
    <string name="more_plans">More Plans</string>

    <string name="title_canvass">Canvass</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Plans</string>
    <string name="title_notifications">Events Map</string>
    <string name="title_plans">Plans</string>
    <string name="title_map">Map</string>
    <string name="title_donate">Donate</string>
    <string name="title_more">More</string>

    <string name="drawer_timeline">Timeline</string>
    <string name="drawer_legislation">Legislation</string>
    <string name="drawer_debt_calculator">Debt Calculator</string>
    <string name="drawer_wallpapers">Wallpapers</string>
    <string name="drawer_news">News</string>
    <string name="drawer_taxes">Tax Returns</string>
    <string name="drawer_jobs">Jobs</string>
    <string name="drawer_press">Press</string>
    <string name="drawer_podcast">Podcast</string>
    <string name="drawer_how_to_vote">How to Vote</string>

    <string name="web_title_events">Events</string>
    <string name="web_title_canvass">Bern App</string>
    <string name="web_title_news">Bern Notice</string>
    <string name="web_title_taxes">Bernie\'s Tax Returns</string>
    <string name="web_title_jobs">Jobs</string>
    <string name="web_title_press">Press</string>
    <string name="web_title_podcast">Hear the Bern</string>
    <string name="web_title_vote">Voter Registration Info</string>
    <string name="web_title_debt_calculator">College Debt Relief Calculator</string>
    <string name="web_title_volunteer">Volunteer</string>
    <string name="web_title_donate">Donate</string>

    <string name="fragment_title_legislation">Legislation</string>
    <string name="fragment_title_main">Bernie 2020</string>
    <string name="fragment_title_plan_detail">Plan Details</string>
    <string name="fragment_title_plans">Plans</string>
    <string name="fragment_title_web">Web Resource</string>

    <string name="options_menu_search">Search</string>
    <string name="options_menu_search_hint">Search</string>
    <string name="options_menu_open_in_browser">Open in Browser</string>
    
    <string name="plans_and_bills">Plans \n &amp; Bills</string>
    <string name="upcoming_events">Upcoming \n Events</string>
    <string name="volunteer_with_bernie">Volunteer with Bernie</string>
    <string name="title_favorites">Favorites</string>
    <string name="drawer_favorites">Favorites</string>
    <string name="plans_no_search_matches">No plans match your keyword search.\nPlease try another!</string>
    <string name="legislation_no_search_matches">No legislation matches your keyword search.\nPlease try another!</string>
    <string name="summary">Summary</string>
    <string name="details">Details</string>
    <string name="entire_bill">Entire Bill</string>
    <string name="share_legislation">Share Bernie\'s Legislation</string>
    <string name="add_to_favorites">Add some favorites!</string>
    <string name="first_timeline_year">1962</string>

    <string name="volunteer_button_top_text">Volunteer with Bernie</string>
    <string name="volunteer_button_bottom_text">Over a million have signed up!</string>
    <string name="donate_button_text">Donate to Bernie</string>

    <string name="ny_registration_Text">NY Registration Ends Oct. 11th!</string>
    <string name="web_ny_resgister">Register to Vote! </string>
    <string name="ny_resgister_url">https://www.elections.ny.gov/VotingRegister.html</string>
    <string name="ny_dialog">New York has a closed primary and you MUST be registered Democrat to vote for Bernie.\n\nTo make sure your change in registration counts, DO NOT register online through the DMV.\n\nOn the following page, scroll down to New York State Voter Registration Form. Either complete the English or Spanish fillable pdf or use the accessible form. Print the resulting page and mail it to the Board of Elections (BOE), or drop it off in person.\n\nBOE Locations can be found here:\n\nhttps://www.elections.ny.gov/countyboards.html \n OR \n https://www.elections.ny.gov/NYSBOE/Counties/CountyBoardRoster.pdf</string>


    <string name="plans_collapse_all">Collapse All</string>
    <string name="plans_expand_all">Expand All</string>
    <string name="options_menu_copy_url">Copy URL</string>
    <string name="webview_link_copied">Link Copied!</string>
    <string name="context_share_on_twitter">Share on Twitter</string>
    <string name="context_share_full_text">Share Full Text</string>
    <string name="twitter_share_hashtag">#BernieHasPlans: </string>
    <string name="plan_share_full_text_preamble">Bernie has plans that meet the level of the crises we face.\n\n</string>
    <string name="share_full_text_link">\n\nMore information can be found at:</string>
    <string name="twitter_share_leg_preamble">.\@BernieSanders has serious legislation to match the depth of our serious problems.\n\nFor example, check out his</string>
    <string name="share_full_text_leg_preamble">Bernie Sanders has serious legislation to match the depth of our serious problems.\n\nFor example, check out his</string>
    <string name="ny_voter_reg_deadline">Voter Registration Deadline: Oct 11th</string>
    <string name="ny_dialog_proceed">PROCEED TO VOTER REGISTRATION</string>

</resources>
