<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bot_nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/bot_nav_plans"
        android:icon="@drawable/ic_format_list_bulleted_black_24dp"
        android:title="@string/title_plans" />

    <item
        android:id="@+id/bot_nav_events_map"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/title_map" />

    <item
        android:id="@+id/bot_nav_canvass"
        android:icon="@drawable/ic_directions_walk_black_24dp"
        android:title="@string/title_canvass" />

    <item
        android:id="@+id/bot_nav_more"
        android:icon="@drawable/ic_more_horiz_black_24dp"
        android:title="@string/title_more" />

</menu>
