<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

<ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        app:layout_constraintTop_toTopOf="parent"
        >

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            >

    <ImageView
            android:id="@+id/logo_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/ic_bernie_logo"
            android:layout_marginTop="16dp"
            />

    <androidx.cardview.widget.CardView
            android:id="@+id/events_button"
            android:layout_width="0dp"
            android:layout_height="100dp"
            app:layout_constraintWidth_max="180dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo_image_view"
            app:cardBackgroundColor="@color/primaryColor"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upcoming_events"
                android:textSize="22sp"
                android:layout_margin="8dp"
                android:textColor="@color/white"
                />

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

    <androidx.cardview.widget.CardView
            android:id="@+id/plans_button"
            android:layout_width="0dp"
            android:layout_height="100dp"
            app:layout_constraintWidth_max="180dp"
            app:layout_constraintStart_toEndOf="@id/guideline"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo_image_view"
            android:layout_marginTop="32dp"
            app:cardBackgroundColor="@color/primaryColor"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plans_and_bills"
                android:textSize="22sp"
                android:layout_margin="8dp"
                android:textColor="@color/white"

                />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:id="@+id/news_button"
            android:layout_width="0dp"
            android:layout_height="100dp"
            app:layout_constraintWidth_max="180dp"
            app:layout_constraintStart_toEndOf="@id/guideline"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/plans_button"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/primaryColor"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news"
                android:textSize="22sp"
                android:layout_margin="8dp"
                android:textColor="@color/white"

                />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:id="@+id/timeline_button"
            android:layout_width="0dp"
            android:layout_height="100dp"
            app:layout_constraintWidth_max="180dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/events_button"
            app:cardBackgroundColor="@color/primaryColor"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeline"
                android:textSize="22sp"
                android:layout_margin="8dp"
                android:textColor="@color/white"

                />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:id="@+id/donate_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="@+id/timeline_button"
            app:layout_constraintEnd_toEndOf="@+id/news_button"
            app:layout_constraintTop_toBottomOf="@+id/timeline_button"
            
            app:cardBackgroundColor="@color/secondaryDarkColor"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:layout_marginBottom="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donate_to_bernie"
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:textSize="20sp"
                android:fontFamily="@font/lora_bolditalic"
                />
    </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
 <View
            android:id="@+id/volunteer_button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/primaryColor"
            app:layout_constraintBottom_toBottomOf="parent"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
            android:id="@+id/volunteer_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volunteer_with_bernie"
            app:layout_constraintStart_toStartOf="@id/volunteer_button"
            app:layout_constraintTop_toTopOf="@id/volunteer_button"
            app:layout_constraintBottom_toBottomOf="@id/volunteer_button"
            android:textSize="26sp"
            android:textColor="@color/white"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/lora_bolditalic"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>